Fix: widths/overflow

--- a/component-library/components/generic/form/checkbox-input/checkbox-input.scss
+++ b/component-library/components/generic/form/checkbox-input/checkbox-input.scss
@@ -14,6 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
 
     &:focus {
         border: 2px solid var(--interaction-blue-300, #2566F2);
