--- a/component-library/components/generic/form/country-select-input/country-select-input.scss
+++ b/component-library/components/generic/form/country-select-input/country-select-input.scss
@@ -15,6 +15,7 @@
         grid-row: 2;
         grid-column: 1;
         cursor: pointer;
+        width: 100%;
 
         // custom arrow
         -webkit-appearance: none;
